kubernetes/apps/monitoring/kube-prometheus-stack/app/alertmanager-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    # Authentik forward auth annotations
    nginx.ingress.kubernetes.io/auth-url: "http://ak-outpost-alertmanager-forward-auth.kube-system.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://alertmanager.${SECRET_DOMAIN}/outpost.goauthentik.io/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid"
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Proxy-Secret 5fe72a39b8eae3adb5e0b8b6354a50ff93a9f5bf78ac8763537b7fcec99faa957e8ca0706e4c89fc7ecc20f4b4e04c97f2895694f0f73a7bba5c0065ba340074;
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - "alertmanager.${SECRET_DOMAIN}"
  rules:
    - host: "alertmanager.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
